--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,5 +7,5 @@ test:
 
 production:
   adapter: redis
-  url: 'redis://redistogo:bd757287b4c34c8bea71ba6f0f8aa51f@spinyfin.redistogo.com:9867/'
+  url: redis://redistogo:bd757287b4c34c8bea71ba6f0f8aa51f@spinyfin.redistogo.com:9867/
   channel_prefix: realchat_production
